--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb+srv://AkshaySwaminathan:Cherry2020@communityhub.lzc0rn9.mongodb.net/?retryWrites=true&w=majority&appName=CommunityHub
-SECRET_KEY=DSMr2XO7K8kM3OZ5LwayZ9+p1ZMok3oVMB5+XA/9cGg=
-SESSION_SECRET=DSMr2XO7K8kM3OZ5LwayZ9+p1ZMok3oVMB5+XA/9cGg=
+MONGO_URI=
+SECRET_KEY=
+SESSION_SECRET=
