--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "name": "e-society",
+  "name": "Community Hub",
   "builds": [
     { "src": "./server.js", "use": "@vercel/node" }
   ],
