--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,23 @@
-MONGO_URI=
-SECRET_KEY=
-SESSION_SECRET=
+# MongoDB Configuration
+# Replace with your MongoDB connection string
+# Local MongoDB: mongodb://localhost:27017/community-hub
+# MongoDB Atlas: mongodb+srv://username:password@cluster.mongodb.net/community-hub
+MONGO_URI=your_mongodb_connection_string_here
+
+# Stripe Payment Gateway Configuration
+# Get these from your Stripe Dashboard: https://dashboard.stripe.com/apikeys
+SECRET_KEY=sk_test_your_stripe_secret_key_here
+PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
+
+# Session Security
+# Generate a random string for session security
+# You can use: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+SESSION_SECRET=your_random_session_secret_here
+
+# Environment
+# Set to 'production' for live deployment, 'development' for local testing
+NODE_ENV=development
+
+# Optional: Port Configuration
+# Default is 3000, change if needed
+PORT=3000
