--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "node": ">=20 <=22"
   },
   "scripts": {
-    "start": "NODE_ENV=production node server.js",
-    "dev": "NODE_ENV=development node server.js"
+    "start": "node server.js",
+    "dev": "set NODE_ENV=development && node server.js",
+    "dev:unix": "NODE_ENV=development node server.js"
   },
   "license": "ISC",
   "dependencies": {
